modules/gdscript/tests/scripts/runtime/errors/reload_suspended_function_helper.notest.gd
static func test(a):
	await a.finished
	pass
